kubernetes/whatsdown-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whatsdown
  labels: 
    istio-injection: disabled
