kubernetes/whatsdown-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whatsdown-ingress
  namespace: whatsdown
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: whatsdown.nl
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: whatsdownfrontend
            port: 
              number: 4200  
#temp for debug only:
  # - host: authservice.whatsdown.nl
  #   http:
  #     paths:
  #     - path: / 
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: authservice
  #           port: 
  #             number: 6001
  # - host: locationservice.whatsdown.nl
  #   http:
  #     paths:
  #     - path: / 
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: locationservice
  #           port: 
  #             number: 6031  
  - host: api.whatsdown.nl
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: backendservice
            port: 
              number: 6011  

  # - host: messageservice.whatsdown.nl
  #   http:
  #     paths:
  #     - path: / 
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: frontendservice
  #           port: 
  #             number: 6021
